--- a/bio.qmd
+++ b/bio.qmd
@@ -2,6 +2,25 @@
 title: "Bio"
 ---
 
+```{=html}
+<style>
+  body {
+  background-image: url("/backgrounds/background_mas.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+  
+.text-background {
+    background-color: rgba(256, 256, 256, 0.6); 
+    color: black; /* White text for contrast */
+    padding: 5px 10px; /* Padding around text */
+    display: inline-block; /* Ensures the background only takes up necessary space */
+}
+</style>
+```
+
+::: text-background
+
 **Last updated: April 2024**
 
 I was born on February 25th, 1999 in Agrigento, a small city in Sicily*.* The very same night, [Fabio Fazio interviewed Mikhail Gorbachev at the Festival di Sanremo](https://www.youtube.com/watch?v=UZh8m3KygBY). I was destined for studying the relationship between politics and culture!
@@ -25,3 +44,5 @@ Through the years I have also worked outside academia, in the **political commun
 In my free time I still love **writing**. When I was a teenager I used to take part in role-plays based on writing. I have [a blog](www.nienteditwee.blogspot.com) where I write about politics, but I cannot really be consistent with it.
 
 I also love **biking**, and listening to music of every genre. My all-time favorites? The Cure, Fabrizio De André, Club Dogo and Elio e le Storie Tese. My favorite directors are Paolo Sorrentino and Wes Anderson (but I swear I am not *that* kind of hipster). My favorite TV show is probably Scrubs because it's the only comedy show that I still find amusing after 20 years from its release. I am a huge fan of stand-up comedy, both Italian and American. Jim Jefferies and Mike Birbiglia are my personal GOATs.
+
+::: 
