--- a/bio.qmd
+++ b/bio.qmd
@@ -6,6 +6,7 @@ title: "Bio"
 <style>
   body {
   background-image: url("/backgrounds/background_mas.jpeg");
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -20,7 +21,8 @@ title: "Bio"
 ```
 
 ::: text-background
-**Last updated: April 2024**
+
+**Last updated: January 2025**
 
 I was born on February 25th, 1999 in Agrigento, a small city in Sicily. The very same night, [Fabio Fazio interviewed Mikhail Gorbachev at the Festival di Sanremo](https://www.youtube.com/watch?v=UZh8m3KygBY). 
 
@@ -34,11 +36,12 @@ I attended the "Empedocle" classical high school in Agrigento, wanting to be a w
 
 But then I got bored of doing maths for maths' sake. I enrolled in a Master's degree in **Political and Public Communication** at the University of Turin where I graduated in 2022. At that point, I felt like I found my true passion: studying politics and society through quantitative methods.
 
-I am currently enrolled in the PhD program of **Analysis of Social and Economic Processes** (ASEP) at the University of Milan-Biccocca. I am working in the fields of political sociology and political psychology. I am currently living in Antwerp (BE), working with the "[Media, Movement, and Politics (M2P)](https://www.uantwerpen.be/en/research-groups/m2p/)" research group, a wonderful bunch of people who welcomed me warmly and created an incredibly stimulating environment to do research. It started as a research stay, but it became my life. 
+I am currently enrolled in the PhD program of **Analysis of Social and Economic Processes** (ASEP) at the University of Milan-Biccocca. I am working in the fields of political sociology and political psychology. Since February 2024 I live in Antwerp (BE), working with the "[Media, Movement, and Politics (M2P)](https://www.uantwerpen.be/en/research-groups/m2p/)" research group, a wonderful bunch of people who welcomed me warmly and created an incredibly stimulating environment to do research. It started as a research stay, but it became my life. 
 
 ![The entrance to the Antwerp train station, one of its most famous landmarks](images/clipboard-3574034271.png){width="323"}
 
 Through the years I have also worked outside academia, in the **political communication and marketing** fields, managing social media pages and media relations for political organizations and working for electoral campaigns as deputy campaign coordinator and junior researcher for [Social Changes, Inc](https://www.social-changes.com/). during the Italian general political elections of September 2022 and the elections for city council in June 2022.
 
 In my free time I still love **writing**. I also love **biking**, and listening to music of every genre. My all-time favorites? The Cure, Fabrizio De André, Club Dogo and Elio e le Storie Tese. My favorite directors are Paolo Sorrentino and Wes Anderson (but I swear I am not *that* kind of hipster). My favorite TV show is probably Scrubs because it's the only comedy show that I still find amusing after 20 years from its release. I am a huge fan of stand-up comedy.
+
 :::
