--- a/bio.qmd
+++ b/bio.qmd
@@ -34,14 +34,14 @@ I attended the "Empedocle" classical high school in Agrigento, wanting to be a w
 
 ![The city of Turin, which adopted me during my university years](e715e7dd9599f54e9c2780ac9a2cf439.jpg){fig-align="center" width="323"}
 
-But then I got bored of doing maths for maths' sake. I enrolled in a Master's degree in **Political and Public Communication** at the University of Turin where I graduated in 2022. At that point, I felt like I found my true passion: studying politics and society through quantitative methods.
+But then I got bored of doing maths for maths' sake. I enrolled in a Master's degree in **Political and Public Communication** at the University of Turin where I graduated in 2022.
 
-I am currently enrolled in the PhD program of **Analysis of Social and Economic Processes** (ASEP) at the University of Milan-Biccocca. I am working in the fields of political sociology and political psychology. Since February 2024 I live in Antwerp (BE), working with the "[Media, Movement, and Politics (M2P)](https://www.uantwerpen.be/en/research-groups/m2p/)" research group, a wonderful bunch of people who welcomed me warmly and created an incredibly stimulating environment to do research. It started as a research stay, but it became my life. 
+I am currently enrolled in the PhD program of **Analysis of Social and Economic Processes** (ASEP) at the University of Milan-Biccocca. During my Ph.D. I have also been a teaching assistant in the courses of Mathematics and Public Policies in the Bachelor's of Organization Sciences (UNIMIB). Since February 2024 I live in Antwerp (BE), working with the "[Media, Movement, and Politics (M2P)](https://www.uantwerpen.be/en/research-groups/m2p/)". It started as a research stay, but it became my life, and now I'm based in Antwerp until further notice. 
 
 ![The entrance to the Antwerp train station, one of its most famous landmarks](images/clipboard-3574034271.png){width="323"}
 
-Through the years I have also worked outside academia, in the **political communication and marketing** fields, managing social media pages and media relations for political organizations and working for electoral campaigns as deputy campaign coordinator and junior researcher for [Social Changes, Inc](https://www.social-changes.com/). during the Italian general political elections of September 2022 and the elections for city council in June 2022.
+Through the years I have also worked outside academia, in the **political communication and marketing** fields, managing social media pages and media relations for political organizations and working for electoral campaigns as deputy campaign coordinator and junior researcher during the Italian general political elections in 2022.
 
-In my free time I still love **writing**. I also love **biking**, and listening to music of every genre. My all-time favorites? The Cure, Fabrizio De André, Club Dogo and Elio e le Storie Tese. My favorite directors are Paolo Sorrentino and Wes Anderson (but I swear I am not *that* kind of hipster). My favorite TV show is probably Scrubs because it's the only comedy show that I still find amusing after 20 years from its release. I am a huge fan of stand-up comedy.
+In my free time I still love **writing** and **learning languages**. I am currently learning **Dutch**, which helps me to integrate more in Belgian society. After that, I plan to refresh my French as well. I also love **biking**, and listening to music of every genre. My all-time favorites? The Cure, Fabrizio De André, and Elio e le Storie Tese. My favorite directors are Paolo Sorrentino and Wes Anderson (but I swear I am not *that* kind of hipster). My favorite TV show is probably Scrubs because it's the only comedy show that I still find amusing after 20 years from its release. I am a huge fan of stand-up comedy.
 
 :::
